[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Label.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Label2.gd" type="Script" id=2]
[ext_resource path="res://scenes/DeathGUI.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://AvenuePixel-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 82
font_data = SubResource( 1 )

[node name="DeathGUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
margin_left = 420.0
margin_top = 167.0
margin_right = 603.0
margin_bottom = 433.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
margin_right = 183.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.505882, 0, 0, 1 )
text = "YOU DIED"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 183.0
margin_bottom = 266.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 183.0
margin_bottom = 86.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 5.0
margin_right = 151.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.52549, 0.52549, 0.52549, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "SCORE: "
align = 1
valign = 1

[node name="PointLabel" parent="Control/CenterContainer/VBoxContainer/VBoxContainer2/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 155.0
margin_right = 178.0
margin_bottom = 86.0

[node name="retry" type="Label" parent="Control/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 183.0
margin_bottom = 176.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.517647, 0.517647, 0.517647, 1 )
text = "RETRY?"
align = 1
valign = 1
script = ExtResource( 2 )
[connection signal="gui_input" from="Control/CenterContainer/VBoxContainer/VBoxContainer2/retry" to="." method="_on_retry_gui_input"]
[connection signal="mouse_entered" from="Control/CenterContainer/VBoxContainer/VBoxContainer2/retry" to="." method="_on_retry_mouse_entered"]
[connection signal="mouse_exited" from="Control/CenterContainer/VBoxContainer/VBoxContainer2/retry" to="." method="_on_retry_mouse_exited"]
